# WorldBuilder

./: .clang-format  .clang-tidy  .codecov.yml  .codedocs  .drone.yml  .gitignore  .readthedocs.yaml  .travis.yml  .typos.toml  AUTHORS  CHANGELOG.md  CITATION  CMakeLists.txt  README.md  appveyor.yml
app/: main.cc
cmake/: version.cmake
tests/: CMakeLists.txt  boost_tester.cc  catch2.h  doctest.h  world_builder_point.cc
tests/C/: example.c  test.c
tests/CPP_MPI/: example.cpp
tests/app/: app_continental_plate_2d.wb  app_continental_plate_3d.wb  app_continental_plate_cartesian.wb  app_oceanic_plate_cartesian.wb  app_oceanic_plate_constant_age.wb  app_operations_subtract.wb  app_spherical.wb  app_spherical_2d.wb  app_spherical_3d.wb  app_wb1.wb  app_wb2.wb  app_wb3.wb  cartesian_multiridge.wb  cartesian_slab_spline_complex.wb  continental_min_max_surface.wb  depth_method_slab_begin_at_end_segment.wb  half_space_plate_model.wb  mantle_layer_min_max_surface.wb  mantle_layer_min_max_surface_spherical.wb  mass_conserving_slab_temperature.wb  mass_conserving_slab_temperature_proto.wb  oceanic_min_max_surface.wb  oceanic_min_max_surface_spherical.wb  run_app_tests.cmake  slab_interpolation_180pm_CMS.wb  slab_interpolation_simple_CMS.wb  slab_interpolation_simple_curved_CMS.wb  slab_interpolation_simple_curved_none.wb  slab_interpolation_simple_none.wb  spherical_mc_slab_and_half_space_plate_model.wb  spherical_slab_interpolation_simple_CMS.wb  spherical_slab_interpolation_simple_subdiv.wb  spherical_slab_mass_conserving_slab_temperature.wb  world_buider_declarations_closed.md  world_buider_declarations_open.md
tests/data/: composition_properties_map.wb  continental_plate.wb  fault_constant_angles_cartesian.wb  fault_constant_angles_cartesian_2.wb  fault_constant_angles_cartesian_force_temp.wb  fault_different_angles_cartesian.wb  indicator_properties_map.wb  interpolation_linear_cartesian.wb  interpolation_monotone_spline_cartesian.wb  interpolation_none_cartesian.wb  mantle_layer_cartesian.wb  oceanic_plate.wb  oceanic_plate_cartesian.wb  oceanic_plate_spherical.wb  simple_wb1.json  simple_wb2.json  simple_wb3.json  spherical_depth_method_begin_segment.wb  spherical_depth_method_starting_point.wb  subducting_plate.wb  subducting_plate_composition_smooth_by_tag.wb  subducting_plate_constant_angles_cartesian.wb  subducting_plate_different_angles_cartesian.wb  subducting_plate_different_angles_cartesian_2.wb  subducting_plate_different_angles_spherical.wb  test_data.txt  type_data.json
tests/fortran/: example.f90  run_fortran_tests.cmake
tests/gwb-dat/: 2d_cartesian_ascii_data.wb  2d_cartesian_plume_points.wb  3d_cartesian_chapman_geotherm.wb  app_continental_plate_2d.wb  app_continental_plate_3d.wb  app_continental_plate_cartesian.wb  app_oceanic_plate_cartesian.wb  app_oceanic_plate_constant_age.wb  app_operations_add.wb  app_operations_replace.wb  app_operations_subtract.wb  app_spherical_3d.wb  app_wb1.wb  app_wb3.wb  ascii_file_olivine.wb  ascii_file_olivine_enstatite.wb  cartesian_chapman_geotherm.wb  cartesian_fault_x_and_y_direction.wb  cartesian_multiridge.wb  cartesian_no_ridge_drift.wb  cartesian_perlin_noise.wb  cartesian_slab_linear_adiabat.wb  cartesian_slab_mass_conserving.wb  cartesian_slab_spline_complex.wb  cartesian_slab_x_and_y_direction.wb  cartesian_variable_spreading.wb  cartesian_young_slab_mass_conserving.wb  chunk_slab_mass_conserving.wb  continental_min_max_surface.wb  continental_min_max_surface_spherical.wb  dat_continental_plate_density.wb  depth_method_slab_begin_at_end_segment.wb  fault_complex_spherical.wb  geodynamic_world_builder_mar.json  half_space_plate_model.wb  half_space_variable_spreading.wb  linear_cartesian_obliquity.wb  mantle_layer_min_max_surface.wb  mantle_layer_min_max_surface_spherical.wb  mass_conserving_slab_temperature_plate_model_old.wb  (+47 more)
tests/gwb-grid/: 2d_cartesian_plume.grid  2d_cartesian_plume.vtu  2d_cartesian_plume.wb  2d_cartesian_subduction_rift_with_half_space_cooled_topo.vtu  2d_cartesian_subduction_rift_with_plate_model_topo.vtu  3d_annulus_plume.vtu  3d_annulus_plume.wb  3d_plume.vtu  3d_plume.wb  3d_plume_tip.grid  3d_plume_tip.vtu  3d_plume_tip.wb  3d_sphere_plume.vtu  3d_sphere_plume.wb  3d_spherical_plume.grid  3d_spherical_plume.vtu  3d_spherical_plume.wb  cartesian_2d_topography.wb  cartesian_2d_topography_density.grid  cartesian_2d_topography_density.vtu  cartesian_2d_topography_density.wb  cartesian_3d_topography.wb  cartesian_3d_topography_perlin.vtu  cartesian_3d_topography_perlin.wb  cartesian_subducting_plate_gridfile.grid  chunk_topography.vtu  chunk_topography.wb  composition_operations.grid  composition_operations.vtu  composition_operations.wb  continental_plate_composition_random.vtu  continental_plate_composition_random.wb  continental_plate_density.grid  continental_plate_density.vtu  continental_plate_density.wb  euler_poles.vtu  euler_poles.wb  fault.vtu  fault.wb  fault_density.grid  (+36 more)
tests/python/: example.py  run_python_tests.cmake
tests/unit_tests/: bounding_box.cc  gwb_gravity.cc  kd_tree.cc  main.cc  unit_test_wb_glm.cc  unit_test_world_builder.cc  utilities.cc  world_builder_point.cc
tests/unit_tests/approval_tests/approved/: unit_test_world_builder.GWB_Bezier_curve.txt  unit_test_world_builder.WorldBuilder_Coordinate_Systems__Spherical.txt  unit_test_world_builder.WorldBuilder_Features__Distance_to_Feature_Plane.txt  unit_test_world_builder.WorldBuilder_Features__Fault.txt  unit_test_world_builder.WorldBuilder_Features__Oceanic_Plate.txt  (+9 more)
tests/visualization/: 2d_cartesian_subducting_plate_sticky_air.grid  2d_cartesian_subducting_plate_sticky_air.vtu  2d_cartesian_subducting_plate_sticky_air.wb  2d_spherical_subduction_rift_sticky_air.grid  2d_spherical_subduction_rift_sticky_air.vtu  3d_spherical_subduction_sticky_air.grid  3d_spherical_subduction_sticky_air.vtu  3d_spherical_subduction_sticky_air_compress.grid  3d_spherical_subduction_sticky_air_compress.vtu  cartesian_surface.grid  fault.vtu  fault.wb  gridfile.grid  subducting_plate_manual3.vtu  subducting_plate_manual3.wb
(+746 files in other folders)
